--- a/app/views/tandem_contents/new.html.erb
+++ b/app/views/tandem_contents/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New tandem_content</h1>
 
-<% form_for(@tandem_content) do |f| %>
+<% form_for([@tandem_page, @tandem_content]) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -24,4 +24,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', tandem_contents_path %>
+<%= link_to 'Back', tandem_page_tandem_contents_path(@tandem_page) %>
