--- a/app/views/tandem_contents/show.html.erb
+++ b/app/views/tandem_contents/show.html.erb
@@ -19,5 +19,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_tandem_content_path(@tandem_content) %> |
-<%= link_to 'Back', tandem_contents_path %>
+<%= link_to 'Edit', edit_tandem_page_tandem_content_path(@tandem_page, @tandem_content) %> |
+<%= link_to 'Back', tandem_page_tandem_contents_path(@tandem_page) %>
