--- a/app/views/tandem_pages/show.html.erb
+++ b/app/views/tandem_pages/show.html.erb
@@ -1,33 +1,9 @@
-<p>
-  <b>Title:</b>
-  <%=h @tandem_page.title %>
-</p>
+<% @tandem_page.tandem_contents.each do |tandem_content| -%>
+  <div class="tandem_content">
+    
+  </div>
+<% end -%>
 
-<p>
-  <b>Token:</b>
-  <%=h @tandem_page.token %>
-</p>
-
-<p>
-  <b>Layout:</b>
-  <%=h @tandem_page.layout %>
-</p>
-
-<p>
-  <b>Parent:</b>
-  <%=h @tandem_page.parent_id %>
-</p>
-
-<p>
-  <b>Keywords:</b>
-  <%=h @tandem_page.keywords %>
-</p>
-
-<p>
-  <b>Description:</b>
-  <%=h @tandem_page.description %>
-</p>
-
-
-<%= link_to 'Edit', edit_tandem_page_path(@tandem_page) %> |
-<%= link_to 'Back', tandem_pages_path %>
+<% if can_edit_tandem_content? -%>
+  <p><%= link_to 'Add content', '#' %></p>
+<% end -%>
