Display some content!

--- a/app/views/tandem_pages/show.html.erb
+++ b/app/views/tandem_pages/show.html.erb
@@ -1,6 +1,6 @@
 <% @tandem_page.tandem_contents.each do |tandem_content| -%>
   <div class="tandem_content">
-    
+    <%= display_tandem_content(tandem_content) %>
   </div>
 <% end -%>
 
