--- a/app/views/tandem_contents/edit.html.erb
+++ b/app/views/tandem_contents/edit.html.erb
@@ -20,5 +20,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Show', [@tandem_page, @tandem_content] %> |
-<%= link_to 'Back', tandem_page_tandem_contents_path(@tandem_page) %>
+<%= link_to 'Back', tandem_page_path(@tandem_page) %>
