--- a/app/views/tandem_contents/new.html.erb
+++ b/app/views/tandem_contents/new.html.erb
@@ -20,4 +20,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', tandem_page_tandem_contents_path(@tandem_page) %>
+<%= link_to 'Back', tandem_page_path(@tandem_page) %>
