Tweaking configuration so that Tandem works in a 3.1 env

--- a/app/views/tandem_contents/new.html.erb
+++ b/app/views/tandem_contents/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New tandem_content</h1>
 
-<% form_for([@tandem_page, @tandem_content]) do |f| %>
+<%= form_for([@tandem_page, @tandem_content]) do |f| %>
   <%= f.error_messages %>
   
   <% f.fields_for :resource, TandemText.new do |resource_form| %>
