--- a/app/views/tandem_pages/edit.html.erb
+++ b/app/views/tandem_pages/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing tandem_page</h1>
 
-<% form_for(@tandem_page) do |f| %>
+<%= form_for(@tandem_page) do |f| %>
   <%= f.error_messages %>
 
   <p>
