--- a/app/views/tandem_texts/new.html.erb
+++ b/app/views/tandem_texts/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New tandem_text</h1>
 
-<% form_for(@tandem_text) do |f| %>
+<%= form_for(@tandem_text) do |f| %>
   <%= f.error_messages %>
 
   <p>
