Adding layouts to the generator DRYing up the initializer for testing purposes and logging

--- a/lib/generators/templates/initializer.rb.tt
+++ b/lib/generators/templates/initializer.rb.tt
@@ -33,3 +33,5 @@ Tandem::Configuration.user_abilities_proc { |user|
   #can :update, Content
   #can :read, Content
 }
+
+puts Tandem::Configuration.template_dir
