Story #21562885 - create a helper method (exposed to the host application) that places a content region on a page; uses a unique key of page_id;tag;type. - the helper method should provide common functionality, such as buttons to edit (using authorization) -helper method will use a find_or_create approach, so editors can focus on only edit/update actions as opposed to new/create -all content types should support link functionality

--- a/lib/generators/templates/layouts/tandem/default.html.erb
+++ b/lib/generators/templates/layouts/tandem/default.html.erb
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+<%= tandem_image_tag(@page, :test_image) if @page %>
+<%= tandem_text_tag(@page, :test_text) if @page %>
+
 <%= yield %>
 
 </body>
