--- a/app/assets/stylesheets/tandem/contents.css
+++ b/app/assets/stylesheets/tandem/contents.css
@@ -2,3 +2,9 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+
+.tandem_toolbar {
+  position: absolute;
+  display: none;
+  background-color: pink;
+}
