--- a/lib/generators/templates/layouts/tandem/default.html.erb
+++ b/lib/generators/templates/layouts/tandem/default.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Dummy::Tandem</title>
-  <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag    "tandem/application" %>
+  <%= javascript_include_tag "tandem/application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
