--- a/lib/generators/templates/layouts/tandem/popup.html.erb
+++ b/lib/generators/templates/layouts/tandem/popup.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>::Tandem</title>
+  <title>::Tandem Popup</title>
   <%= stylesheet_link_tag    "tandem/application" %>
   <%= javascript_include_tag "tandem/application" %>
   <%= csrf_meta_tags %>
