--- a/lib/generators/templates/layouts/tandem/page.html.erb
+++ b/lib/generators/templates/layouts/tandem/page.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>::Tandem::Page</title>
+  <title><%=@page.title%></title>
   <%= stylesheet_link_tag    "tandem/application" %>
   <%= javascript_include_tag "tandem/application" %>
   <%= csrf_meta_tags %>
@@ -10,11 +10,13 @@
 
 <%= yield %>
 
-<% if @page && @page.persisted? %>
-  <%= tandem_content_tag(@page, :test_image, :image) %>
-  <%= tandem_image_tag(@page, :test_image2) %>
-  <%= tandem_text_tag(@page, :test_text) %>
-<% end %>
+<%= tandem_navigation_tag(@page, class: 'tandem_nav') %>
+
+<h1><%= @page.page_label %></h1>
+
+<%= tandem_content_tag(@page, :test_image, :image) %>
+<%= tandem_image_tag(@page, :test_image2) %>
+<%= tandem_text_tag(@page, :test_text) %>
 
 </body>
 </html>
