--- a/app/assets/stylesheets/tandem/application.css
+++ b/app/assets/stylesheets/tandem/application.css
@@ -5,3 +5,11 @@
  *= require_self
  *= require_tree . 
 */
+
+
+label {
+  width: 200px;
+  display: inline-block;
+  text-align: right;
+  padding-right: 8px;
+}
