--- a/app/views/tandem/pages/_form.html.slim
+++ b/app/views/tandem/pages/_form.html.slim
@@ -13,11 +13,11 @@
     = f.label :title
     = f.text_field :title
   .field
-    = f.label :token
-    = f.text_field :token
+    = f.label :page_label
+    = f.text_field :page_label
   .field
-    = f.label :layout
-    = f.text_field :layout
+    = f.label :link_label
+    = f.text_field :link_label
   .field
     = f.label :template
     = f.text_field :template
