temporary commit - switching strategies to use jQuery .load to find specific element to replace

--- a/app/views/tandem/contents/show.html.slim
+++ b/app/views/tandem/contents/show.html.slim
@@ -1,20 +1,1 @@
-p#notice = notice
-
-p
-  b Page:
-  = @content.page_id
-p
-  b Type:
-  = @content.type
-p
-  b Token:
-  = @content.token
-p
-  b Tag:
-  = @content.tag
-p
-  b Content:
-  = @content.content
-p
-  b Bcontent:
-  = @content.bcontent
+=tandem_content_tag(@page,@content.tag,@content.type,@options)
