--- a/app/views/tandem/contents/_form.html.slim
+++ b/app/views/tandem/contents/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for [@page, @content], url: page_contents_path(@page.id,@content.id) do |f|
+= form_for [@page, @content], url: page_content_path(@page.id,@content.id) do |f|
   -if @content.errors.any?
     #error_explanation
       h2 = "#{pluralize(@content.errors.count, "error")} prohibited this content from being saved:"
