Integrated wymeditor Protected (and fixed) Content Subtype type actions (create, select, edit) Made Content Form dynamic based on type Completed (fixed) all edit redirect behavior Modified Manifest files in js and css to selectively pull only the assets required, and moved functionality into sub-files Updated all layouts ^^

--- a/app/assets/stylesheets/tandem/popup.css
+++ b/app/assets/stylesheets/tandem/popup.css
@@ -1,6 +1,11 @@
 /*
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
-*= require tandem/colorbox
-*= require tandem/contents
 */
+
+label {
+  width: 200px;
+  display: inline-block;
+  text-align: right;
+  padding-right: 8px;
+}
