--- a/app/views/tandem/contents/show.html.slim
+++ b/app/views/tandem/contents/show.html.slim
@@ -1,1 +1,20 @@
-=tandem_content_tag(@page,@content.tag,@content.type,@options)
+p#notice = notice
+
+p
+  b Page:
+  = @content.page_id
+p
+  b Type:
+  = @content.type
+p
+  b Token:
+  = @content.token
+p
+  b Tag:
+  = @content.tag
+p
+  b Content:
+  = @content.content
+p
+  b Bcontent:
+  = @content.bcontent
