--- a/app/views/tandem/contents/success.html.slim
+++ b/app/views/tandem/contents/success.html.slim
@@ -1,3 +1,3 @@
 p#notice = notice
 
-#success_data style='display:none' resource_url="#{page_content_path(@page.id,@content.id)}" resource_id="#{@content.tag}""
+#success_data style='display:none' resource_url="#{page_path(@page)}" resource_id="#{@content.tag}""
