--- a/lib/generators/templates/layouts/tandem/popup.html.erb
+++ b/lib/generators/templates/layouts/tandem/popup.html.erb
@@ -3,7 +3,9 @@
 <head>
   <title>::Tandem Popup</title>
   <%= stylesheet_link_tag    "tandem/application" %>
+  <%= stylesheet_link_tag    "tandem/popup" %>
   <%= javascript_include_tag "tandem/application" %>
+  <%= javascript_include_tag "tandem/popup" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
