--- a/lib/generators/templates/layouts/tandem/page.html.erb
+++ b/lib/generators/templates/layouts/tandem/page.html.erb
@@ -3,7 +3,9 @@
 <head>
   <title><%=@page.title%></title>
   <%= stylesheet_link_tag    "tandem/application" %>
+  <%= stylesheet_link_tag    "tandem/pages" %>
   <%= javascript_include_tag "tandem/application" %>
+  <%= javascript_include_tag "tandem/pages" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
