Upgraded Generator to add route and copy migrations Added migration to create default page Restructured UX - page routing now uses slug - /tandem now routes to home action in page controller (which renders the default page) - home action display generic messaging if no pages exist - presets parent id when creating a page from another page - made parent_id field a radio button choice - restricted templates - allowed templates in host app to be specified

--- a/app/views/tandem/images/show.html.slim
+++ b/app/views/tandem/images/show.html.slim
@@ -2,7 +2,7 @@ p#notice = notice
 
 p
   b Resource:
-  = image_tag @image.resource.url(:small)
+  = image_tag @image.resource.url(:thumb)
 
 
 = link_to 'Edit', edit_image_path(@image)
