--- a/app/views/tandem/pages/show.html.slim
+++ b/app/views/tandem/pages/show.html.slim
@@ -1,11 +1,15 @@
 p#notice = notice
 
 #page_links
-  - if can? :create, @page
+  - if can?(:create, @page)
     = link_to 'New Page', new_page_path(parent_id: @page.id), :class => :page_link, :id => :page_new_link
-  - if can? :update, @page
+  - if @page.persisted? && can?(:update, @page)
     = link_to 'Edit Page', edit_page_path(@page), :class => :page_link, :id => :page_edit_link
-  - if can? :destroy, @page
+  - if @page.persisted? && can?(:destroy, @page)
     = link_to 'Destroy Page', @page, :confirm => 'Are you sure?', :method => :delete
-  - if can? :index, ::Tandem::Page
+  - if can?(:index, ::Tandem::Page)
     = link_to 'Page Listing', pages_path
+
+
+- unless @page.persisted?
+  | This is the default page content and should tell the user to go create a page
