Tested mounting the app at a different path to make sure no routes or asset paths were statically associated with /tandem Finished Image Gallery Integration (via Paperclip) - Added thumbnail listing of existing images to select from to Content::Image editor - Added 'upload new image' to Content::Image editor - Integrated Tandem::Image and Tandem::Content::Image helpers so that associated images are rendered correctly - Configured paperclip attachments to save correctly in the public assets space of the host application - Added an API configuration setting to easily change the location of saved paperclip attachments - Added UI ajax and javascript elements to make Content::Image edit form dynamic and easy to use

--- a/app/views/tandem/images/_form.html.slim
+++ b/app/views/tandem/images/_form.html.slim
@@ -7,7 +7,6 @@
           li= msg
 
   .field
-    = f.label :resource
     = f.file_field :resource
   .actions
-    = f.submit 'Save'
+    = f.submit 'Upload'
