--- a/app/views/tandem/images/index.html.slim
+++ b/app/views/tandem/images/index.html.slim
@@ -1,17 +1,9 @@
-h1 Listing images
+h3 Gallery
 
-table
-  tr
-    th
-    th
-    th
+- @images.each do |image|
+  div
+    = image_tag image.resource.url(:thumb), :onclick => "select_gallery_item(#{image.id})"
+    = link_to 'Destroy', image, :confirm => 'Are you sure?', :method => :delete
 
-  - @images.each do |image|
-    tr
-      td= link_to 'Show', image
-      td= link_to 'Edit', edit_image_path(image)
-      td= link_to 'Destroy', image, :confirm => 'Are you sure?', :method => :delete
-
-br
-
-= link_to 'New Image', new_image_path
+- if @update_current_image
+  script parent.update_current_image();
