--- a/app/assets/stylesheets/tandem/popup.css
+++ b/app/assets/stylesheets/tandem/popup.css
@@ -9,3 +9,27 @@ label {
   text-align: right;
   padding-right: 8px;
 }
+#selected_image_title {
+  position: absolute;
+  top: 20px;
+  left: 500px;
+}
+#selected_image_viewpane {
+  position: absolute;
+  top: 60px;
+  left: 500px;
+  width: 80px;
+  height: 80px;
+  background-color: red;
+}
+#right_image_panel {
+  float: right;
+  width: 40%;
+  padding: 10px;
+}
+#left_image_panel {
+  float: left;
+  width: 50%;
+  padding: 10px;
+}
+
