--- a/app/views/tandem/contents/_form.html.slim
+++ b/app/views/tandem/contents/_form.html.slim
@@ -12,9 +12,29 @@
   .field
     = f.label :link_target
     = f.text_field :link_target
+  br
+
   -if @content.is_a?(Tandem::Content::Text)
     .field
-      br
       = f.text_area :content, class: "wymeditor"
+
   .actions
     = f.submit 'Save', class: "wymupdate"
+
+  -if @content.is_a?(Tandem::Content::Image)
+    .field
+      = f.hidden_field :image_id
+
+    h3#selected_image_title Current Image
+    #selected_image_viewpane{src=thumb_image_path(':id:')} =image_content_tag @content, {}, :thumb
+
+    br
+    br
+    br
+    br
+    br
+
+    #left_image_panel
+      iframe{src=images_path(selected: 1) style='width:100%;height:300px;border:0px'}
+    #right_image_panel
+      iframe{src=new_image_path style='width:100%;height:300px;border:0px'}
