Fixed all non-controller tests so they pass Fixed Factories so they are used Added Fixtures (for specific one-off requirements)

--- a/lib/generators/templates/layouts/tandem/page.html.erb
+++ b/lib/generators/templates/layouts/tandem/page.html.erb
@@ -7,6 +7,8 @@
   <%= javascript_include_tag "tandem/application" %>
   <%= javascript_include_tag "tandem/pages" %>
   <%= csrf_meta_tags %>
+  <META name="description" content="<%=@page.description%>">
+  <META name="keywords" content="<%=@page.keywords%>">
 </head>
 <body>
 
