--- a/app/views/tandem/pages/_form.html.slim
+++ b/app/views/tandem/pages/_form.html.slim
@@ -8,7 +8,7 @@
 
   .field
     = f.label :parent_id
-    = f.radio_button :parent_id, nil
+    = f.radio_button :parent_id, ''
     | top level page
     - if @page.parent.present?
       = f.radio_button :parent_id, @page.parent_id
