[#23760219] Rename references to 'template' that are actually referring to 'layout'.
Note, you may see places where I left references to 'template'. This is because the next story is to allow developers to specify custom templates.

--- a/app/views/tandem/pages/index.html.slim
+++ b/app/views/tandem/pages/index.html.slim
@@ -6,7 +6,7 @@ table
     th Link Label
     th Page Label
     th Page Title
-    th Template
+    th Layout
     th Keywords
     th Description
     th
@@ -19,7 +19,7 @@ table
       td= page.link_label
       td= page.page_label
       td= page.title
-      td= page.template
+      td= page.layout
       td= page.keywords
       td= page.description
       td= link_to 'Show', page
