[#23706463] Add form select so users can choose which custom template to use for a page.

--- a/app/views/tandem/pages/_form.html.slim
+++ b/app/views/tandem/pages/_form.html.slim
@@ -29,6 +29,9 @@
     = f.label :layout
     = f.select :layout, options_for_select(valid_layouts,@page.layout), :include_blank => true
   .field
+    = f.label :template
+    = f.select :template, options_for_select(valid_templates, @page.template), :include_blank => true
+  .field
     = f.label :keywords
     = f.text_field :keywords
   .field
