[Fixes #2020768491] Fix tandem internal modal layouts to include new tandem asset manifest

--- a/app/views/layouts/tandem/image.html.erb
+++ b/app/views/layouts/tandem/image.html.erb
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>::Tandem Image Gallery</title>
-  <%= stylesheet_link_tag    "tandem/application" %>
-  <%= stylesheet_link_tag    "tandem/images" %>
-  <%= javascript_include_tag "tandem/application" %>
-  <%= javascript_include_tag "tandem/images" %>
+  <title>Tandem Image Gallery</title>
+  <%= stylesheet_link_tag    "tandem" %>
+  <%= javascript_include_tag "tandem" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
