--- a/app/views/layouts/tandem/popup.html.erb
+++ b/app/views/layouts/tandem/popup.html.erb
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>::Tandem Popup</title>
-  <%= stylesheet_link_tag    "tandem/application" %>
-  <%= stylesheet_link_tag    "tandem/popup" %>
-  <%= javascript_include_tag "tandem/application" %>
-  <%= javascript_include_tag "tandem/popup" %>
+  <title>Tandem Popup</title>
+  <%= stylesheet_link_tag    "tandem" %>
+  <%= javascript_include_tag "tandem" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
