--- a/app/views/layouts/tandem/popup.html.erb
+++ b/app/views/layouts/tandem/popup.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Tandem Popup</title>
   <%= stylesheet_link_tag    "tandem" %>
-  <%= javascript_include_tag "tandem" %>
+  <%= javascript_include_tag "tandem/popup" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
