[Completes #24080481] Add some initial editable areas using some markup from twitter bootstrap, which users could easily add and be in good shape for an initial site. Should we include twitter bootstrap? Still considering.

--- a/app/views/tandem/pages/show.html.slim
+++ b/app/views/tandem/pages/show.html.slim
@@ -10,6 +10,14 @@ p#notice = notice
   - if can?(:index, ::Tandem::Page)
     = link_to 'Page Listing', pages_path
 
+.hero-unit
+  = tandem_text_tag(@page, :hero_text)
+
+.row
+  .span8
+    = tandem_text_tag(@page, :main_text)
+  .span4
+    = tandem_text_tag(@page, :sidebar_text)
 
 - unless @page.persisted?
   | This is the default page content and should tell the user to go create a page
