[#24080481] Include an editable image too

--- a/app/views/tandem/pages/show.html.slim
+++ b/app/views/tandem/pages/show.html.slim
@@ -15,6 +15,7 @@ p#notice = notice
 
 .row
   .span8
+    = tandem_image_tag(@page, :main_image)
     = tandem_text_tag(@page, :main_text)
   .span4
     = tandem_text_tag(@page, :sidebar_text)
