[Completes #23765993] Make page links a helper method.

--- a/app/views/tandem/pages/show.html.slim
+++ b/app/views/tandem/pages/show.html.slim
@@ -1,14 +1,6 @@
 p#notice = notice
 
-#page_links
-  - if can?(:create, @page)
-    = link_to 'New Page', new_page_path(parent_id: @page.id), :class => :page_link, :id => :page_new_link
-  - if @page.persisted? && can?(:update, @page)
-    = link_to 'Edit Page', edit_page_path(@page), :class => :page_link, :id => :page_edit_link
-  - if @page.persisted? && can?(:destroy, @page)
-    = link_to 'Destroy Page', @page, :confirm => 'Are you sure?', :method => :delete
-  - if can?(:index, ::Tandem::Page)
-    = link_to 'Page Listing', pages_path
+= tandem_page_links
 
 .hero-unit
   = tandem_text_tag(@page, :hero_text)
