--- a/app/views/tandem/contents/_form.html.slim
+++ b/app/views/tandem/contents/_form.html.slim
@@ -1,40 +1,40 @@
-= form_for [@page, @content], url: page_content_path(@page.id,@content.id) do |f|
-  -if @content.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@content.errors.count, "error")} prohibited this content from being saved:"
-      ul
-        - @content.errors.full_messages.each do |msg|
-          li= msg
+#tandem-editor
+  h4.tandem-title Tandem
+    
+  = form_for [@page, @content], url: page_content_path(@page.id,@content.id) do |f|
+    -if @content.errors.any?
+      #error_explanation
+        h2 = "#{pluralize(@content.errors.count, "error")} prohibited this content from being saved:"
+        ul
+          - @content.errors.full_messages.each do |msg|
+            li= msg
 
-  .field
-    = f.label :link_url
-    = f.text_field :link_url
-  .field
-    = f.label :link_target
-    = f.text_field :link_target
-  br
+    -if @content.is_a?(Tandem::Content::Text)
+      .field
+        = f.text_area :content, class: "wymeditor"
 
-  -if @content.is_a?(Tandem::Content::Text)
-    .field
-      = f.text_area :content, class: "wymeditor"
 
-  .actions
-    = f.submit 'Save', class: "wymupdate"
+    -if @content.is_a?(Tandem::Content::Image)
+      .field
+        = f.hidden_field :image_id
+      .upload-image.clearfix
+        h3#selected_image_title Current Image
+        #selected_image_viewpane{src=thumb_image_path(':id:')} =image_content_tag @content, {}, :thumb
+          
+      #left_image_panel
+        iframe{src=images_path(selected: 1) style='width:100%;height:300px;border:0px'}
+      #right_image_panel
+        iframe{src=new_image_path style='width:100%;height:300px;border:0px'}
 
-  -if @content.is_a?(Tandem::Content::Image)
-    .field
-      = f.hidden_field :image_id
+    #advanced_settings
+      a href="/" Advanced Settings
+      .advanced-settings
+        .field
+          = f.label :link_url
+          = f.text_field :link_url
+        .field
+          = f.label :link_target
+          = f.text_field :link_target
 
-    h3#selected_image_title Current Image
-    #selected_image_viewpane{src=thumb_image_path(':id:')} =image_content_tag @content, {}, :thumb
-
-    br
-    br
-    br
-    br
-    br
-
-    #left_image_panel
-      iframe{src=images_path(selected: 1) style='width:100%;height:300px;border:0px'}
-    #right_image_panel
-      iframe{src=new_image_path style='width:100%;height:300px;border:0px'}
+    .actions
+      = f.submit 'Save', class: "wymupdate"
