[#24418075] finished up some styling on the editor, changed destroy to delete in copy for button, added fake show button on image editing

--- a/app/views/tandem/contents/_form.html.slim
+++ b/app/views/tandem/contents/_form.html.slim
@@ -17,14 +17,18 @@
     -if @content.is_a?(Tandem::Content::Image)
       .field
         = f.hidden_field :image_id
-      .upload-image.clearfix
-        h3#selected_image_title Current Image
-        #selected_image_viewpane{src=thumb_image_path(':id:')} =image_content_tag @content, {}, :thumb
-          
-      #left_image_panel
-        iframe{src=images_path(selected: 1) style='width:100%;height:300px;border:0px'}
-      #right_image_panel
-        iframe{src=new_image_path style='width:100%;height:300px;border:0px'}
+      div#tandem-image-editor.clearfix
+
+
+        #current-image.clearfix
+          h3#selected_image_title Current Image
+          #selected_image_viewpane.clearfix{src=thumb_image_path(':id:')} =image_content_tag @content, {}, :thumb
+  
+        #gallery-image.clearfix
+          iframe{src=new_image_path}
+          h3 Gallery
+          iframe{src=images_path(selected: 1)}
+
 
     #advanced_settings
       a href="/" Advanced Settings
