--- a/app/views/tandem/images/index.html.slim
+++ b/app/views/tandem/images/index.html.slim
@@ -1,9 +1,13 @@
-h1.tandem-title Gallery
+.tandem-gallery
+  ul
+    - @images.each do |image|
+      li
+        = image_tag image.resource.url(:thumb), :onclick => "select_gallery_item(#{image.id})", :class => "thumb"
+        ul.actions
+          li 
+            a.show href="/" Show
+            = link_to 'Delete', image, :confirm => 'Are you sure?', :method => :delete, :class => "delete"
 
-- @images.each do |image|
-  div
-    = image_tag image.resource.url(:thumb), :onclick => "select_gallery_item(#{image.id})"
-    = link_to 'Destroy', image, :confirm => 'Are you sure?', :method => :delete
 
-- if @update_current_image
-  script parent.update_current_image();
+  - if @update_current_image
+    script parent.update_current_image();
