--- a/app/views/tandem/pages/index.html.slim
+++ b/app/views/tandem/pages/index.html.slim
@@ -26,7 +26,7 @@ table
       - if can?(:update, page)
         td= link_to 'Edit', edit_page_path(page), :class => :page_link
       - if can?(:destroy, page)
-        td= link_to 'Destroy', page, :confirm => 'Are you sure?', :method => :delete
+        td= link_to 'Delete', page, :confirm => 'Are you sure?', :method => :delete
 
 br
 
